--- a/src/main/resources/templates/car/parkManage/form.html
+++ b/src/main/resources/templates/car/parkManage/form.html
@@ -52,15 +52,15 @@ var vm = new Vue({
 			name: [
 				{ required: true, message: '不能为空', trigger: 'blur' }
 			],
-			parkingSpaceNumber: [
-				{ required: true, message: '不能为空', trigger: 'blur',type: 'number'}
-			],
-			freeTime: [
-				{ required: true, message: '不能为空', trigger: 'blur',type: 'number'}
-			],
-			timeUnit: [
-				{ required: true, message: '不能为空', trigger: 'blur',type: 'number'}
-			],
+			// parkingSpaceNumber: [
+			// 	{ required: true, message: '不能为空', trigger: 'blur',type: 'number'}
+			// ],
+			// freeTime: [
+			// 	{ required: true, message: '不能为空', trigger: 'blur',type: 'number'}
+			// ],
+			// timeUnit: [
+			// 	{ required: true, message: '不能为空', trigger: 'blur',type: 'number'}
+			// ],
 			unitCost: [
 				{ required: true, message: '不能为空', trigger: 'blur'}
 			],
