--- a/src/main/resources/templates/car/parkManage/list.html
+++ b/src/main/resources/templates/car/parkManage/list.html
@@ -48,10 +48,16 @@ layui.use(["okUtils", "okLayer"], function () {
                 key : "parkingSpaceNumber",
                 title : "车位总数",
                 minWidth:100
-            },{
+            },
+                {
+                    key : "parkingResidueNumber",
+                    title : "剩余总数",
+                    minWidth:100
+                },
+                {
                 key : "freeTime",
                 title : "免费时长",
-                minWidth:150
+                minWidth:100
             },{
                 key : "timeUnit",
                 title : "计时单元",
